--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/HomeCliente.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/HomeCliente.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #f8f9fa;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controlador.HomeCliente">
+<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #f8f9fa;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.HomeCliente">
 
     <!-- Menú lateral izquierdo -->
     <left>
