--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/MiBilleteraCliente.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/MiBilleteraCliente.fxml
@@ -5,7 +5,7 @@
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controlador.MiBilleteraCliente"
+      fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresCliente.MiBilleteraCliente"
       spacing="15" style="-fx-padding: 20;">
 
     <Label text="MI BILLETERA" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
