--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/PantallaPrincipal.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/PantallaPrincipal.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #eaf2f8;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controlador.PantallaPrincipal">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #eaf2f8;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.PantallaPrincipal">
 
     <!-- Barra superior -->
     <HBox alignment="CENTER_RIGHT" spacing="10" style="-fx-padding: 15; -fx-background-color: #85c1e9;" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
