--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ReportesAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ReportesAdmin.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.String?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controlador.ReportesAdmin"
+      fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.ReportesAdmin"
       spacing="15" style="-fx-padding: 20;">
 
     <Label text="Generar Reportes" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
