--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ResenasCliente.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ResenasCliente.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controlador.ResenasCliente">
+<VBox spacing="10" style="-fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresCliente.ResenasCliente">
 
     <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Mis Resenas" />
     <TableView fx:id="tblResenas" prefHeight="400">
