--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ReportesAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/ReportesAdmin.fxml
@@ -8,24 +8,16 @@
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.ReportesAdmin"
-      spacing="15" style="-fx-padding: 20;">
+      spacing="20" style="-fx-padding: 20;">
 
-    <Label text="Generar Reportes" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+    <Label text="Generar Reportes" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
 
     <HBox spacing="10" alignment="CENTER_LEFT">
-        <ComboBox fx:id="cbTipoReporte" promptText="Seleccionar reporte" prefWidth="200">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="Reservas por período"/>
-                    <String fx:value="Alojamientos más populares"/>
-                    <String fx:value="Ingresos totales"/>
-                </FXCollections>
-            </items>
-        </ComboBox>
-        <DatePicker fx:id="dpFechaInicio" promptText="Fecha inicio"/>
-        <DatePicker fx:id="dpFechaFin" promptText="Fecha fin"/>
-        <Button fx:id="btnGenerar" text="Generar PDF" style="-fx-background-color: #e74c3c; -fx-text-fill: white;"/>
+        <ComboBox fx:id="cbTipoReporte" promptText="Tipo de Reporte" prefWidth="200"/>
+        <DatePicker fx:id="dpFechaInicio" promptText="Inicio" />
+        <DatePicker fx:id="dpFechaFin" promptText="Fin" />
+        <Button fx:id="btnGenerar" text="Generar PDF" style="-fx-background-color: #c0392b; -fx-text-fill: white;" />
     </HBox>
 
-    <TableView fx:id="tblDatosReporte" style="-fx-background-color: white;"/>
+    <TableView fx:id="tblDatosReporte" prefHeight="400" />
 </VBox>
