Registro de usuario

--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/RegistroCliente.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/RegistroCliente.fxml
@@ -54,10 +54,12 @@
         </GridPane>
 
         <!-- Botón de acción -->
-        <Button onAction="#registrarUsuario" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold; -fx-pref-width: 150; -fx-pref-height: 30;" text="Registrarse" />
+        <Button fx:id="btnRegistrarse" onAction="#registrarUsuario" style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold; -fx-pref-width: 150; -fx-pref-height: 30;" text="Registrarse" />
 
         <!-- Mensaje de error -->
         <Label fx:id="lblMensajeError" style="-fx-text-fill: #e74c3c; -fx-font-weight: bold;" />
     </VBox>
-     <Button fx:id="btnVolver" layoutY="-1.0" onAction="#volverPantallaPrincipal" prefHeight="18.0" prefWidth="30.0" style="-fx-background-color: #95a5a6; -fx-text-fill: white; -fx-font-weight: bold; -fx-pref-width: 150; -fx-pref-height: 30;" text="&lt;--" />
+
+    <!-- Botón de volver -->
+    <Button fx:id="btnVolver" layoutY="-1.0" onAction="#volverPantallaPrincipal" prefHeight="18.0" prefWidth="30.0" style="-fx-background-color: #95a5a6; -fx-text-fill: white; -fx-font-weight: bold; -fx-pref-width: 150; -fx-pref-height: 30;" text="&lt;--" />
 </AnchorPane>
