--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/GestionOfertasAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/GestionOfertasAdmin.fxml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.GestionOfertasAdmin">
+<BorderPane prefHeight="472.0" prefWidth="767.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.GestionOfertasAdmin">
 
     <top>
         <HBox alignment="CENTER_LEFT" style="-fx-background-color: #ecf0f1; -fx-padding: 15;">
             <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Gestión de Ofertas" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button onAction="#btnAgregarOferta" style="-fx-background-color: #27ae60; -fx-text-fill: white;" text="+ Nueva Oferta" />
+            <Button fx:id="btnCrearOferta" style="-fx-background-color: #2980b9; -fx-text-fill: white;" text="+ Crear Oferta" />
         </HBox>
     </top>
-
     <center>
-        <TableView fx:id="tblOfertas">
-            <columns>
-                <TableColumn fx:id="colCodigo" prefWidth="100" text="Código" />
-                <TableColumn fx:id="colDescripcion" prefWidth="200" text="Descripción" />
-                <TableColumn fx:id="colPorcentaje" prefWidth="100" text="Descuento (%)" />
-                <TableColumn fx:id="colFechaInicio" prefWidth="120" text="Fecha Inicio" />
-                <TableColumn fx:id="colFechaFin" prefWidth="120" text="Fecha Fin" />
-            </columns>
-        </TableView>
+        <VBox alignment="TOP_CENTER" prefHeight="354.0" prefWidth="745.0" BorderPane.alignment="CENTER">
+            <children>
+                <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                    <children>
+                        <CheckBox fx:id="esGlobal" mnemonicParsing="false" text="Global" />
+                        <ComboBox fx:id="boxCiudad" prefWidth="150.0" promptText="Ciudad" />
+                        <ComboBox fx:id="boxAlojamiento" prefWidth="150.0" promptText="Tipo Alojamiento" />
+                        <Button mnemonicParsing="false" onAction="#buscarOferta" style="-fx-background-color: #4a7c91;" text="Buscar" textFill="WHITE" />
+                    </children>
+                </HBox>
+                <Text fill="#4a7c91" strokeType="OUTSIDE" strokeWidth="0.0" text="Ofertas" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Text>
+                <FlowPane fx:id="flowPaneOferfas" prefHeight="397.0" prefWidth="767.0" />
+            </children>
+        </VBox>
     </center>
-
-    <bottom>
-        <HBox spacing="10" style="-fx-padding: 10;">
-            <Button text="Eliminar" style="-fx-background-color: #d71414; -fx-text-fill: white;" onAction="#eliminarOferta" />
-            <Button text="Actualizar" style="-fx-background-color: #0787ff; -fx-text-fill: white;" onAction="#actualizarOferta" />
-        </HBox>
-    </bottom>
 </BorderPane>
