--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/GestionOfertasAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/GestionOfertasAdmin.fxml
@@ -18,7 +18,7 @@
         <HBox alignment="CENTER_LEFT" style="-fx-background-color: #ecf0f1; -fx-padding: 15;">
             <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Gestión de Ofertas" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="btnCrearOferta" style="-fx-background-color: #2980b9; -fx-text-fill: white;" text="+ Crear Oferta" />
+            <Button onAction="#btnCrearOferta" style="-fx-background-color: #2980b9; -fx-text-fill: white;" text="+ Crear Oferta" />
         </HBox>
     </top>
     <center>
