--- a/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/RegistrarOfertas.fxml
+++ b/src/main/resources/co/edu/uniquindio/proyectofinalhotelfx/FXMLDW(ADMIN)/RegistrarOfertas.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +15,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-
 
 <VBox alignment="TOP_CENTER" prefHeight="444.0" prefWidth="745.0" spacing="10.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinalhotelfx.Controladores.ControladoresAdm.RegistrarOfertasAdmin">
    <children>
@@ -38,11 +38,13 @@
                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Codigo" />
                <TextField fx:id="idField" GridPane.columnIndex="1" />
                <DatePicker fx:id="fechaInicio" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               <ComboBox fx:id="tipoOferta" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+               <ComboBox fx:id="tipoOferta" prefWidth="150.0" promptText="Tipo de Oferta" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Descuento %" GridPane.rowIndex="5" />
-               <ComboBox fx:id="descuentoField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-               <Slider fx:id="sliderNochesMin" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Noches Minimas" GridPane.rowIndex="8" />
+               <ComboBox fx:id="descuentoField" prefWidth="150.0" promptText="Tipo de descuento" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               <Slider fx:id="sliderNochesMin" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Noches Minimas" GridPane.rowIndex="9" />
+               <CheckBox fx:id="esGlobal" mnemonicParsing="false" text="Aplica A todos" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Glocal" GridPane.rowIndex="7" />
                <columnConstraints>
                   <ColumnConstraints />
                   <ColumnConstraints />
@@ -55,6 +57,7 @@
                   <RowConstraints />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" />
                   <RowConstraints />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
                   <RowConstraints />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" />
                </rowConstraints>
@@ -77,8 +80,8 @@
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad" />
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo Alojamiento" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="ciudadBox" prefWidth="150.0" GridPane.columnIndex="1" />
-                        <ComboBox fx:id="alojamientoBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="ciudadBox" prefWidth="150.0" promptText="Ciudad" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="alojamientoBox" prefWidth="150.0" promptText="Tipo Alojamiento" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
